Closed Bug 232068 Opened 22 years ago Closed 21 years ago

security/ should use the newer nsIPrefService APIs instead of nsIPref

Categories

(Core :: Security, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: mikael, Assigned: mikael)

References

Details

Attachments

(1 file)

nsIPref is deprecated and should be replaced by nsIPrefService with friends
Status: NEW → ASSIGNED
Summary: Remove nsIPref from security/ → security/ should use the newer nsIPrefService APIs instead of nsIPref
Attachment #156989 - Flags: superreview?(darin)
Attachment #156989 - Flags: review?(kaie)
Comment on attachment 156989 [details] [diff] [review] patch to remove nsIPref >Index: security/manager/ssl/src/nsCRLManager.cpp >+ nsCOMPtr<nsIPrefService> prefSvc = do_GetService(NS_PREFSERVICE_CONTRACTID,&rv); >+ nsCOMPtr<nsIPrefBranch> pref = do_GetService(NS_PREFSERVICE_CONTRACTID,&rv); Change one of these do_GetService calls into do_QueryInterface, or use prefSvc->GetBranch, to get the default pref branch. Not worth it to go through the service manage twice to get back to the same underlying object. >Index: security/manager/ssl/src/nsNSSComponent.cpp >+ else if (nsCRT::strcmp(aTopic, NS_PREFBRANCH_PREFCHANGE_TOPIC_ID) == 0) { I might have kept the PrefChanged function instead of adding all this code inline. But, I guess you are being consistent with the other observer topics this function handles. OK. sr=darin not sure if kaie is actively reviewing patches anymore. if you don't get a response from him, you might try asking someone else for a review.
Attachment #156989 - Flags: superreview?(darin) → superreview+
Attachment #156989 - Flags: review?(kaie) → review?(jgmyers)
Attachment #156989 - Flags: review?(jgmyers) → review?(wchang0222)
Comment on attachment 156989 [details] [diff] [review] patch to remove nsIPref Sorry, I'm not qualified to review this patch. Darin, could you suggest someone familiar with nsIPrefBranch and nsIPrefService to review this patch?
Attachment #156989 - Flags: review?(wchang0222)
Comment on attachment 156989 [details] [diff] [review] patch to remove nsIPref not easy to find someone to review this. David do you think you are allowed (and feel like it)?
Attachment #156989 - Flags: review?(bienvenu)
Comment on attachment 156989 [details] [diff] [review] patch to remove nsIPref I've r='d, but you still need a= from a module owner before this can be checked in
Attachment #156989 - Flags: review?(bienvenu) → review+
I'd like module owner approval on this patch
moa=jgmyers
Checking in boot/src/nsSecurityWarningDialogs.cpp; /cvsroot/mozilla/security/manager/boot/src/nsSecurityWarningDialogs.cpp,v <-- nsSecurityWarningDialogs.cpp new revision: 1.10; previous revision: 1.9 done Checking in boot/src/nsSecurityWarningDialogs.h; /cvsroot/mozilla/security/manager/boot/src/nsSecurityWarningDialogs.h,v <-- nsSecurityWarningDialogs.h new revision: 1.3; previous revision: 1.2 done Checking in pki/src/nsNSSDialogs.h; /cvsroot/mozilla/security/manager/pki/src/nsNSSDialogs.h,v <-- nsNSSDialogs.h new revision: 1.17; previous revision: 1.16 done Checking in ssl/src/nsCMSSecureMessage.cpp; /cvsroot/mozilla/security/manager/ssl/src/nsCMSSecureMessage.cpp,v <-- nsCMSSecureMessage.cpp new revision: 1.9; previous revision: 1.8 done Checking in ssl/src/nsCRLManager.cpp; /cvsroot/mozilla/security/manager/ssl/src/nsCRLManager.cpp,v <-- nsCRLManager.cpp new revision: 1.11; previous revision: 1.10 done Checking in ssl/src/nsNSSCertificateDB.cpp; /cvsroot/mozilla/security/manager/ssl/src/nsNSSCertificateDB.cpp,v <-- nsNSSCertificateDB.cpp new revision: 1.14; previous revision: 1.13 done Checking in ssl/src/nsNSSComponent.cpp; /cvsroot/mozilla/security/manager/ssl/src/nsNSSComponent.cpp,v <-- nsNSSComponent.cpp new revision: 1.117; previous revision: 1.116 done Checking in ssl/src/nsNSSComponent.h; /cvsroot/mozilla/security/manager/ssl/src/nsNSSComponent.h,v <-- nsNSSComponent.h new revision: 1.35; previous revision: 1.34 done Checking in ssl/src/nsNSSIOLayer.cpp; /cvsroot/mozilla/security/manager/ssl/src/nsNSSIOLayer.cpp,v <-- nsNSSIOLayer.cpp new revision: 1.94; previous revision: 1.93 done
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: