Bug 232068: security should use newer nsIPrefService APIs instead of nsIPref. Patch by Mikael Parknert (mikael@parknert.se), r=bienvenu, sr=darin.