security/manager/ssl/src/nsCMSSecureMessage.cpp
@@ -55,7 +55,8 @@
 #include "cms.h"
 
 #include "nsIServiceManager.h"
-#include "nsIPref.h"
+#include "nsIPrefService.h"
+#include "nsIPrefBranch.h"
 
 #include "prlog.h"
 #ifdef PR_LOGGING
@@ -96,8 +97,7 @@ GetCertByPrefID(const char *certID, char **_retval)
 
   *_retval = 0;
 
-  static NS_DEFINE_CID(kPrefCID, NS_PREF_CID);
-  nsCOMPtr<nsIPref> prefs = do_GetService(kPrefCID, &rv);
+  nsCOMPtr<nsIPrefBranch> prefs = do_GetService(NS_PREFSERVICE_CONTRACTID, &rv);
   if (NS_FAILED(rv)) {
     goto done;
   }
